--- a/oil/templates/oil/index.html
+++ b/oil/templates/oil/index.html
@@ -4,5 +4,6 @@
     <li><a href="/oil/{{ question.id }}">{{ question.question_text }}</a></li>
 {% endfor %}
   </ul>
+{% else %}
   <p>No polls are available</p>
 {% endif %}
